--- a/tags.yaml
+++ b/tags.yaml
@@ -1,2 +1,3 @@
 todo: https://raw.githubusercontent.com/EzioTheDeadPoet/tag_repository/master/todo.md
 av: https://raw.githubusercontent.com/EzioTheDeadPoet/tag_repository/master/av.md
+av_test: https://raw.githubusercontent.com/EzioTheDeadPoet/tag_repository/master/av_test.md
