--- a/tags.yaml
+++ b/tags.yaml
@@ -1,3 +1,4 @@
 todo: https://raw.githubusercontent.com/EzioTheDeadPoet/tag_repository/master/todo.md
 av: https://raw.githubusercontent.com/EzioTheDeadPoet/tag_repository/master/av.md
 av_test: https://raw.githubusercontent.com/EzioTheDeadPoet/tag_repository/master/av_test.md
+rpg_loot: https://raw.githubusercontent.com/Synthesis-Collective/HalgarisConsistentRPGLoot/3_0_New_Distribution/README.md
