--- a/tags.yaml
+++ b/tags.yaml
@@ -2,3 +2,4 @@ todo: https://raw.githubusercontent.com/EzioTheDeadPoet/tag_repository/master/to
 av: https://raw.githubusercontent.com/EzioTheDeadPoet/tag_repository/master/av.md
 av_test: https://raw.githubusercontent.com/EzioTheDeadPoet/tag_repository/master/av_test.md
 rpg_loot: https://raw.githubusercontent.com/Synthesis-Collective/HalgarisConsistentRPGLoot/3_0_New_Distribution/README.md
+picture_test: https://raw.githubusercontent.com/EzioTheDeadPoet/tag_repository/master/picture.md
